--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,16 +1,20 @@
-.App-logo {
+/* .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
-}
+} */
 
 .App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
+    /* background-color: #222; */
+    /* height: 30vmin; */
     color: white;
 }
 
-.App-title {
+
+/* .App-title {
     font-size: 1.5em;
-  }
-  
+} */
+
+.header-img {
+    /* height: 300px; */
+    width: 100%;
+}
