Changes: * app was restructured. * component "Content" was added.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
     height: 80px;
 } */
 
-.App-header {
+.Header {
     /* background-color: #222; */
     /* height: 30vmin; */
     color: white;
